[package]
name = "cuda-confidence"
version = "0.1.0"
edition = "2021"
description = "Confidence propagation with harmonic mean fusion"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-confidence"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }

